<resources>
    <string name="app_name">Accountent</string>
    <string name="login_button_text">Log in</string>
    <string name="login_username_text">Username</string>
    <string name="login_pass_text">Password</string>
    <string name="login_sign_up_text">Sign Up</string>
    <string name="made_by_msn_it">Made By MSN-IT</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="my_groups">My Groups</string>
    <string name="my_accounts">My Accounts</string>
    <string name="accounts">Accounts</string>
    <string name="enter_currency">Enter Currency</string>
    <string name="enter_initial_cash">Enter Initial Cash</string>
    <string name="transactions">Transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="deposit">Deposit</string>
    <string name="enter_transaction_title">Enter Transaction Title</string>
    <string name="type">Type</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_note">Enter Note</string>
    <string name="back">Back\n</string>
    <string name="amount">Amount:</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="edit_button">Edit \n</string>
    <string name="logout">Logout</string>
    <string name="profile_image">User Profile image\n</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign UP</string>
    <string name="made_by_nedal_alqutati_msn_it" translatable="false">Made By: Nedal AlQutati (MSN-IT)</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_page">Login Page</string>
    <string name="name">Name</string>
    <string name="en">EN</string>
    <string name="my_profile">My Profile</string>
</resources>